--- a/ios/myshoppinglist.xcodeproj/xcshareddata/xcschemes/DEV-Debug.xcscheme
+++ b/ios/myshoppinglist.xcodeproj/xcshareddata/xcschemes/DEV-Debug.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1400"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "myshoppinglist.app"
-               BlueprintName = "myshoppinglist"
+               BuildableName = "(DEV) Shopping List.app"
+               BlueprintName = "DEV"
                ReferencedContainer = "container:myshoppinglist.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "My Shopping List.app"
-            BlueprintName = "myshoppinglist"
+            BuildableName = "(DEV) Shopping List.app"
+            BlueprintName = "DEV"
             ReferencedContainer = "container:myshoppinglist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -57,6 +57,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "(DEV) Shopping List.app"
+            BlueprintName = "DEV"
+            ReferencedContainer = "container:myshoppinglist.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
