--- a/ios/myshoppinglist.xcodeproj/xcshareddata/xcschemes/DEV-Release.xcscheme
+++ b/ios/myshoppinglist.xcodeproj/xcshareddata/xcschemes/DEV-Release.xcscheme
@@ -1,28 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
-   version = "1.7">
+   LastUpgradeVersion = "1400"
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PreActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "echo &quot;.env&quot; &gt; /tmp/envfile&#10;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-                     BuildableName = "myshoppinglist.app"
-                     BlueprintName = "myshoppinglist"
-                     ReferencedContainer = "container:myshoppinglist.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
-            </ActionContent>
-         </ExecutionAction>
-      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "NO"
@@ -33,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "myshoppinglist.app"
-               BlueprintName = "myshoppinglist"
+               BuildableName = "(DEV) Shopping List.app"
+               BlueprintName = "DEV"
                ReferencedContainer = "container:myshoppinglist.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -63,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "myshoppinglist.app"
-            BlueprintName = "myshoppinglist"
+            BuildableName = "&#x1f680; Shopping List.app"
+            BlueprintName = "DEV"
             ReferencedContainer = "container:myshoppinglist.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
