--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "android": "ENVFILE=.env.dev react-native run-android",
-    "android-release": "ENVFILE=.env react-native run-android --variant release",
+    "android-dev-debug": "ENVFILE=.env.dev react-native run-android --variant DevelopmentDebug",
+    "android-dev-release": "ENVFILE=.env react-native run-android --variant DevelopmentRelease",
+    "android-prod-debug": "ENVFILE=.env react-native run-android --variant ProductionDebug",
+    "android-prod-release": "ENVFILE=.env react-native run-android --variant ProductionRelease",
     "setup": "yarn install_dependencies && yarn pod-install && yarn clean-project",
     "setup_m1": "yarn install_dependencies && yarn pod-install-m1 && yarn clean-project",
     "install_dependencies": "rm -rf node_modules && yarn install --force",
@@ -18,18 +20,19 @@
     "ts-check": "tsc",
     "static-code-validator": "yarn ts-check && yarn lint",
     "pre-commit-hook": "yarn format-staged-code && yarn static-code-validator",
-    "build-android": "cd android && ./gradlew assembleRelease && cd .."
+    "build-android": "cd android && ./gradlew assembleProductionRelease && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "^9.3.1",
+    "@react-native-firebase/app": "^15.6.0",
     "axios": "^0.27.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint-plugin-sonarjs": "^0.15.0",
     "husky": "^8.0.1",
     "pretty-quick": "^3.1.3",
     "react": "18.1.0",
-    "react-native": "0.70.1",
+    "react-native": "0.70.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.3.4"
   },
