--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/netinfo": "^9.3.1",
     "@react-native-firebase/app": "^15.6.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.2",
     "axios": "^0.27.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint-plugin-sonarjs": "^0.15.0",
@@ -33,8 +37,12 @@
     "pretty-quick": "^3.1.3",
     "react": "18.1.0",
     "react-native": "0.70.2",
+    "react-native-gesture-handler": "^2.7.1",
     "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "^4.3.4"
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-spinkit": "^1.5.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
